// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SqlAuditResult should match snapshot when audit error is not empty 1`] = `
<div>
  <div
    class="ant-result ant-result-error"
  >
    <div
      class="ant-result-icon"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-result-title"
    >
      审核失败
    </div>
    <div
      class="ant-result-subtitle"
    >
      network error
    </div>
  </div>
</div>
`;

exports[`SqlAuditResult should match snapshot when audit result is empty 1`] = `
<div>
  <div
    class="result-item css-1avyf41"
  >
    <span
      class="icon-wrapper"
    >
      <svg
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
          fill="#41BF9A"
        />
      </svg>
    </span>
    <span
      class="text-wrapper"
    >
      审核通过
    </span>
  </div>
</div>
`;

exports[`SqlAuditResult should match snapshot when shouldFetchRules is equal false 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="css-10hbsmh"
      >
        <div
          class="title"
        >
          审核结果
        </div>
        <div
          class="result-item has-delete-rule-wrapper css-1v03opz"
        >
          <span
            class="ant-tag ant-tag-volcano message-rule-disabled"
          >
            该规则已删除
          </span>
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                  fill="#EBAD1C"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SqlAuditResult should match snapshot when shouldFetchRules is equal true 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="css-10hbsmh"
      >
        <div
          class="title"
        >
          审核结果
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                  fill="#EBAD1C"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              message
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/rule1/MySQL"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                  fill="#41BF9A"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              message
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/rule2/MySQL"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SqlAuditResult should render audit exception wrapper when auditResultWithAuditException length greater than zero 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="css-10hbsmh"
      >
        <div
          class="title"
        >
          审核结果
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                  fill="#F66074"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              unique索引必须使用固定前缀
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/Oracle_013/DM"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                  fill="#EBAD1C"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              表建议添加注释
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/Oracle_025/DM"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                  fill="#EBAD1C"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              列建议添加注释
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/Oracle_026/DM"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                  fill="#F66074"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              创建表时未指定表空间
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/Oracle_028/DM"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                  fill="#EBAD1C"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              建议表名和关键字大写
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/Oracle_033/DM"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                  fill="#EBAD1C"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              建表DDL必须包含创建时间字段且默认值为SYSDATE，创建时间字段名: CREATE_TIME
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/Oracle_048/DM"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="result-item css-1v03opz"
        >
          <div
            class="css-1avyf41"
          >
            <span
              class="icon-wrapper"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                  fill="#EBAD1C"
                />
              </svg>
            </span>
            <span
              class="text-wrapper"
            >
              建表DDL必须包含更新时间字段且默认值为SYSDATE，更新时间字段名: UPDATE_TIME
            </span>
          </div>
          <div
            class="annotation-wrapper"
          >
            <a
              class="ant-typography"
              href="/sqle/rule/knowledge/Oracle_049/DM"
              rel="noopener noreferrer"
              target="_blank"
            >
              查看更多
            </a>
          </div>
        </div>
        <div
          class="title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              审核异常
            </div>
            <div
              class="ant-space-item"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle tooltips-default-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="audit-exception-wrapper"
        >
          <div
            class="exception-item css-1m6bu0c"
          >
            <div
              class="exception-item-rule-desc-wrapper"
            >
              <span
                class="exception-item-rule-desc-icon"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 16 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                    fill="#EBAD1C"
                  />
                </svg>
              </span>
              <span
                class="exception-item-rule-desc-text"
              >
                数据库对象命名只能使用英文、下划线或数字，首字母必须是英文
              </span>
            </div>
            <div
              aria-label="Audit规则异常：[数据库对象命名只能使用英文、下划线或数字，首字母必须是英文]解析错误;java.lang.NullPointerException
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29$ObjectNameParserListener.a(Rule29.java:110)
	at com.actiontech.sqle.dmplugin.common.antlr4.PlSqlParser$Create_tableContext.enterRule(PlSqlParser.java:51260)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.enterRule(ParseTreeWalker.java:50)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:33)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29.a(Rule29.java:68)
	at com.actiontech.sqle.dmplugin.common.grpcimpl.DriverImpl.a(DriverImpl.java:906)
	at com.actiontech.oracleplugin.grpc.DriverGrpc$MethodHandlers.invoke(DriverGrpc.java:1433)
	at io.grpc.stub.ServerCalls$UnaryServerCallHandler$UnaryServerCallListener.onHalfClose(ServerCalls.java:180)
	at io.grpc.internal.ServerCallImpl$ServerStreamListenerImpl.halfClosed(ServerCallImpl.java:331)
	at io.grpc.internal.ServerImpl$JumpToApplicationThreadServerStreamListener$1HalfClosed.runInContext(ServerImpl.java:814)
	at io.grpc.internal.ContextRunnable.run(ContextRunnable.java:37)
	at io.grpc.internal.SerializingExecutor.run(SerializingExecutor.java:123)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
	at java.lang.Thread.run(Thread.java:750)
"
              class="ant-typography ant-typography-ellipsis ant-typography-single-line exception-item-message-wrapper basic-typography-ellipsis css-wgj5gs"
            >
              Audit规则异常：[数据库对象命名只能使用英文、下划线或数字，首字母必须是英文]解析错误;java.lang.NullPointerException
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29$ObjectNameParserListener.a(Rule29.java:110)
	at com.actiontech.sqle.dmplugin.common.antlr4.PlSqlParser$Create_tableContext.enterRule(PlSqlParser.java:51260)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.enterRule(ParseTreeWalker.java:50)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:33)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29.a(Rule29.java:68)
	at com.actiontech.sqle.dmplugin.common.grpcimpl.DriverImpl.a(DriverImpl.java:906)
	at com.actiontech.oracleplugin.grpc.DriverGrpc$MethodHandlers.invoke(DriverGrpc.java:1433)
	at io.grpc.stub.ServerCalls$UnaryServerCallHandler$UnaryServerCallListener.onHalfClose(ServerCalls.java:180)
	at io.grpc.internal.ServerCallImpl$ServerStreamListenerImpl.halfClosed(ServerCallImpl.java:331)
	at io.grpc.internal.ServerImpl$JumpToApplicationThreadServerStreamListener$1HalfClosed.runInContext(ServerImpl.java:814)
	at io.grpc.internal.ContextRunnable.run(ContextRunnable.java:37)
	at io.grpc.internal.SerializingExecutor.run(SerializingExecutor.java:123)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
	at java.lang.Thread.run(Thread.java:750)

              <div
                aria-label="复制"
                class="ant-typography-copy"
                role="button"
                style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                tabindex="0"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
              <span
                aria-hidden="true"
                style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
              >
                lg
              </span>
              <span
                aria-hidden="true"
                style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
              >
                <span
                  aria-hidden="true"
                >
                  ...
                </span>
                <div
                  aria-label="复制"
                  class="ant-typography-copy"
                  role="button"
                  style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                  tabindex="0"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
          <div
            class="exception-item css-1m6bu0c"
          >
            <div
              class="exception-item-rule-desc-wrapper"
            >
              <span
                class="exception-item-rule-desc-icon"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 16 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                    fill="#EBAD1C"
                  />
                </svg>
              </span>
              <span
                class="exception-item-rule-desc-text"
              >
                数据库对象命名只能使用英文、下划线或数字，首字母必须是英文
              </span>
            </div>
            <div
              aria-label="Audit规则异常：[数据库对象命名只能使用英文、下划线或数字，首字母必须是英文]解析错误;java.lang.NullPointerException
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29$ObjectNameParserListener.a(Rule29.java:110)
	at com.actiontech.sqle.dmplugin.common.antlr4.PlSqlParser$Create_tableContext.enterRule(PlSqlParser.java:51260)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.enterRule(ParseTreeWalker.java:50)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:33)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29.a(Rule29.java:68)
	at com.actiontech.sqle.dmplugin.common.grpcimpl.DriverImpl.a(DriverImpl.java:906)
	at com.actiontech.oracleplugin.grpc.DriverGrpc$MethodHandlers.invoke(DriverGrpc.java:1433)
	at io.grpc.stub.ServerCalls$UnaryServerCallHandler$UnaryServerCallListener.onHalfClose(ServerCalls.java:180)
	at io.grpc.internal.ServerCallImpl$ServerStreamListenerImpl.halfClosed(ServerCallImpl.java:331)
	at io.grpc.internal.ServerImpl$JumpToApplicationThreadServerStreamListener$1HalfClosed.runInContext(ServerImpl.java:814)
	at io.grpc.internal.ContextRunnable.run(ContextRunnable.java:37)
	at io.grpc.internal.SerializingExecutor.run(SerializingExecutor.java:123)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
	at java.lang.Thread.run(Thread.java:750)
"
              class="ant-typography ant-typography-ellipsis ant-typography-single-line exception-item-message-wrapper basic-typography-ellipsis css-wgj5gs"
            >
              Audit规则异常：[数据库对象命名只能使用英文、下划线或数字，首字母必须是英文]解析错误;java.lang.NullPointerException
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29$ObjectNameParserListener.a(Rule29.java:110)
	at com.actiontech.sqle.dmplugin.common.antlr4.PlSqlParser$Create_tableContext.enterRule(PlSqlParser.java:51260)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.enterRule(ParseTreeWalker.java:50)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:33)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at org.antlr.v4.runtime.tree.ParseTreeWalker.walk(ParseTreeWalker.java:36)
	at com.actiontech.sqle.dmplugin.common.rulehandler.Rule29.a(Rule29.java:68)
	at com.actiontech.sqle.dmplugin.common.grpcimpl.DriverImpl.a(DriverImpl.java:906)
	at com.actiontech.oracleplugin.grpc.DriverGrpc$MethodHandlers.invoke(DriverGrpc.java:1433)
	at io.grpc.stub.ServerCalls$UnaryServerCallHandler$UnaryServerCallListener.onHalfClose(ServerCalls.java:180)
	at io.grpc.internal.ServerCallImpl$ServerStreamListenerImpl.halfClosed(ServerCallImpl.java:331)
	at io.grpc.internal.ServerImpl$JumpToApplicationThreadServerStreamListener$1HalfClosed.runInContext(ServerImpl.java:814)
	at io.grpc.internal.ContextRunnable.run(ContextRunnable.java:37)
	at io.grpc.internal.SerializingExecutor.run(SerializingExecutor.java:123)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
	at java.lang.Thread.run(Thread.java:750)

              <div
                aria-label="复制"
                class="ant-typography-copy"
                role="button"
                style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                tabindex="0"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
              <span
                aria-hidden="true"
                style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
              >
                lg
              </span>
              <span
                aria-hidden="true"
                style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
              >
                <span
                  aria-hidden="true"
                >
                  ...
                </span>
                <div
                  aria-label="复制"
                  class="ant-typography-copy"
                  role="button"
                  style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                  tabindex="0"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
